Add Condition, tag & tag type endpoints
